tests/baselines/reference/exportAssignNonIdentifier.errors.txt
foo6.ts(1,14): error TS1109: Expression expected.


==== foo1.ts (0 errors) ====
    var x = 10;
    export = typeof x; // Ok
    
==== foo2.ts (0 errors) ====
    export = "sausages"; // Ok
    
==== foo3.ts (0 errors) ====
    export = class Foo3 {}; // Error, not an expression
    
==== foo4.ts (0 errors) ====
    export = true; // Ok
    
==== foo5.ts (0 errors) ====
    export = undefined; // Valid.  undefined is an identifier in JavaScript/TypeScript
    
==== foo6.ts (1 errors) ====
    export = void; // Error, void operator requires an argument
                 ~
!!! error TS1109: Expression expected.
    
==== foo7.ts (0 errors) ====
    export = Date || String; // Ok
    
==== foo8.ts (0 errors) ====
    export = null; // Ok
    
    